--- a/example/lib/widgets/example/auth.j2.html
+++ b/example/lib/widgets/example/auth.j2.html
@@ -14,7 +14,7 @@
   </div>
 
   <div>
-    <a href="/logout" class="inline-flex items-center rounded-md bg-rose-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500/30">
+    <a href="/logout" class="wave inline-flex items-center rounded-md bg-rose-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500/30">
       {{ $t('auth.logout') }}
     </a>
   </div>
