--- a/example/lib/widgets/example/database.j2.html
+++ b/example/lib/widgets/example/database.j2.html
@@ -50,7 +50,7 @@
         />
         <button
           type="submit"
-          class="inline-flex items-center justify-center rounded-md bg-primary-600 px-3 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500/30"
+          class="wave inline-flex items-center justify-center rounded-md bg-primary-600 px-3 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500/30"
         >{{ $t('database.table.button.add') }}</button>
       </form>
       <div class="pt-2 text-sm text-slate-600">
