--- a/example/lib/widgets/example/form.j2.html
+++ b/example/lib/widgets/example/form.j2.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="my-6">
   <h3 class="text-xl font-semibold text-slate-800">{{ $t('form.validation.title') }}</h3>
-  <div class="my-3 rounded-md border border-slate-200 bg-slate-50 p-3 text-slate-700">
+  <div class="my-3 rounded-md border border-slate-200 bg-white p-3 text-slate-700">
     {{ $t('form.validation.credentials.email') }}: example@uproid.com<br />
     {{ $t('form.validation.credentials.password') }}: @Test123
   </div>
@@ -42,7 +42,7 @@
             {{ $t($n('loginForm/password/errors/0')) }}
           </div>
         </div>
-        <button type="submit" class="inline-flex items-center rounded-md bg-primary-600 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500/30">
+        <button type="submit" class="wave inline-flex items-center rounded-md bg-primary-600 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500/30">
           {{ $t('form.validation.login') }}
         </button>
         {% if loginError %}
@@ -58,7 +58,7 @@
         {{ $t('form.validation.loginSuccess') }} <i>{{ user.name }}</i>
       </div>
       <div class="text-left sm:text-right">
-        <a href="/logout" class="inline-flex items-center rounded-md bg-rose-600 px-3 py-1.5 text-sm font-medium text-white hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500/30">{{ $t('form.validation.logout') }}</a>
+        <a href="/logout" class="wave inline-flex items-center rounded-md bg-rose-600 px-3 py-1.5 text-sm font-medium text-white hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500/30">{{ $t('form.validation.logout') }}</a>
       </div>
     </div>
   </div>
