--- a/example/lib/widgets/example/mysql/_form_edit.j2.html
+++ b/example/lib/widgets/example/mysql/_form_edit.j2.html
@@ -51,9 +51,9 @@
                 </div>
                 {% if(action == 'edit' or action == 'update') %}
                 <input type="hidden" name="id" value="{{ id }}" />
-                <button type="submit" class="inline-flex h-9 items-center rounded-md border border-primary-600 bg-primary-50 px-3 text-xs font-medium text-primary-700 hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-primary-500/30">{{ $t('Update') }}</button>
+                <button type="submit" class="wave inline-flex h-9 items-center rounded-md border border-primary-600 bg-primary-50 px-3 text-xs font-medium text-primary-700 hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-primary-500/30">{{ $t('Update') }}</button>
                 {% else %}
-                <button type="submit" class="inline-flex h-9 items-center rounded-md border border-primary-600 bg-primary-50 px-3 text-xs font-medium text-primary-700 hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-primary-500/30">{{ $t('database.table.button.add') }}</button>
+                <button type="submit" class="wave inline-flex h-9 items-center rounded-md border border-primary-600 bg-primary-50 px-3 text-xs font-medium text-primary-700 hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-primary-500/30">{{ $t('database.table.button.add') }}</button>
                 {% endif %}
             </div>
         </td>
