--- a/example/lib/widgets/example/i18n.j2.html
+++ b/example/lib/widgets/example/i18n.j2.html
@@ -15,7 +15,7 @@
       <ul class="absolute right-0 z-20 mt-2 w-56 max-h-72 overflow-y-auto rounded-md border border-slate-200 bg-white p-1 text-xs shadow-lg">
         {% for key, language in languages %}
         <li>
-          <a href="{{ $e.urlToLanguage(key) }}" class="flex items-center gap-2 rounded px-2 py-1.5 transition-colors {{ 'bg-primary-600 text-white' if $e.ln == key else 'text-slate-700 hover:bg-slate-100' }}">
+          <a href="{{ $e.urlToLanguage(key) }}" class="wave flex items-center gap-2 rounded px-2 py-1.5 transition-colors {{ 'bg-primary-600 text-white' if $e.ln == key else 'text-slate-700 hover:bg-slate-100' }}">
             <b class="text-base leading-none">{{ language.flag }}</b>
             <span class="truncate">{{ language.name }}</span>
           </a>
