--- a/example/lib/widgets/example/mysql/_categories.j2.html
+++ b/example/lib/widgets/example/mysql/_categories.j2.html
@@ -17,7 +17,7 @@
             <td class="px-3 py-2">{{ category.title }}</td>
             <td class="px-3 py-2 text-center">
               <a
-                class="inline-flex h-7 items-center rounded border border-cyan-600 bg-cyan-50 px-2 text-[11px] font-medium text-cyan-700 hover:bg-cyan-100 focus:outline-none focus:ring-2 focus:ring-cyan-500/30"
+                class="wave inline-flex h-7 items-center rounded border border-cyan-600 bg-cyan-50 px-2 text-[11px] font-medium text-cyan-700 hover:bg-cyan-100 focus:outline-none focus:ring-2 focus:ring-cyan-500/30"
                 href="{{ $l.updateUrlQuery($rq, {'filter_category_id': category.id|s}) }}"
               >{{ category.count_books }}</a>
             </td>
@@ -25,7 +25,7 @@
               <a
                 data-href="{{ $l.updateUrlQuery($rq, {'id': category.id|s, 'action': 'delete_category'|s}) }}"
                 data-message="{{ $t('Are you sure you want to delete this category?') ~ ' (' ~ category.title ~ ')' }}"
-                class="js-delete-links inline-flex h-7 w-7 items-center justify-center rounded border border-transparent text-rose-600 hover:border-rose-200 hover:bg-rose-50 hover:text-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500/30"
+                class="wave js-delete-links inline-flex h-7 w-7 items-center justify-center rounded border border-transparent text-rose-600 hover:border-rose-200 hover:bg-rose-50 hover:text-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500/30"
                 aria-label="{{ $t('Delete') }}"
               >
                 <i class="fas fa-trash text-[13px]"></i>
@@ -53,7 +53,7 @@
                 />
                 <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form/title/errors/0') else 'hidden' }}">{{ $n('form/title/errors/0') }}</div>
               </div>
-              <button type="submit" class="inline-flex h-9 items-center rounded-md border border-primary-600 bg-primary-50 px-3 text-xs font-medium text-primary-700 hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-primary-500/30">
+              <button type="submit" class="wave inline-flex h-9 items-center rounded-md border border-primary-600 bg-primary-50 px-3 text-xs font-medium text-primary-700 hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-primary-500/30">
                 {{ $t('database.table.button.add') }}
               </button>
             </form>
