--- a/example/lib/widgets/example/person.j2.html
+++ b/example/lib/widgets/example/person.j2.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="my-6 space-y-6">
-  <h3 class="text-xl font-semibold text-slate-800">Person Example</h3>
+  <h3 class="text-xl font-semibold text-slate-800">{{ $t('person.example.title') }}</h3>
 
   {% if data._id == null %}
   <div class="overflow-hidden rounded-lg border border-slate-200 bg-white shadow-sm">
@@ -13,15 +13,15 @@
       <table class="min-w-full text-xs md:text-sm divide-y divide-slate-200">
         <thead class="bg-slate-50">
           <tr class="text-left font-semibold text-slate-700">
-            <th class="px-3 py-2">Name</th>
-            <th class="px-3 py-2">Age</th>
-            <th class="px-3 py-2">Married</th>
-            <th class="px-3 py-2">Email</th>
-            <th class="px-3 py-2">Height</th>
-            <th class="px-3 py-2">Birthday</th>
-            <th class="px-3 py-2">Job</th>
-            <th class="px-3 py-2">Skils</th>
-            <th class="px-3 py-2 text-end">Action</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.name') }}</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.age') }}</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.married') }}</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.email') }}</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.height') }}</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.birthday') }}</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.job') }}</th>
+            <th class="px-3 py-2">{{ $t('person.table.header.skills') }}</th>
+            <th class="px-3 py-2 text-end">{{ $t('person.table.header.action') }}</th>
           </tr>
         </thead>
         <tbody class="divide-y divide-slate-100">
@@ -53,7 +53,7 @@
           {% endfor %}
           {% if not allPerson or allPerson|length == 0 %}
           <tr>
-            <td colspan="100%" class="px-3 py-8 text-center text-slate-500">No persons found.</td>
+            <td colspan="100%" class="px-3 py-8 text-center text-slate-500">{{ $t('person.table.empty') }}</td>
           </tr>
           {% endif %}
         </tbody>
