--- a/example/lib/widgets/example/mysql/_categories.j2.html
+++ b/example/lib/widgets/example/mysql/_categories.j2.html
@@ -1,13 +1,13 @@
 <div class="mt-8">
-  <h3 class="text-base font-semibold text-slate-800">{{ $t('Example MySQL Categories') }}</h3>
+  <h3 class="text-base font-semibold text-slate-800">{{ $t('mysql.categories.title') }}</h3>
   <div class="mt-4 overflow-x-auto rounded-md border border-slate-200 bg-white shadow-sm">
     <table class="min-w-full text-sm text-slate-700">
       <thead class="bg-slate-50 text-xs uppercase tracking-wide text-slate-600">
         <tr class="divide-x divide-slate-200">
-          <th scope="col" class="w-16 px-3 py-2 text-left font-medium">{{ $t('ID') }}</th>
-          <th scope="col" class="px-3 py-2 text-left font-medium">{{ $t('Title') }}</th>
-          <th scope="col" class="w-32 px-3 py-2 text-center font-medium">{{ $t('Books Count') }}</th>
-          <th scope="col" class="w-20 px-3 py-2 text-center font-medium">{{ $t('Actions') }}</th>
+          <th scope="col" class="w-16 px-3 py-2 text-left font-medium">{{ $t('mysql.table.header.id') }}</th>
+          <th scope="col" class="px-3 py-2 text-left font-medium">{{ $t('mysql.table.header.title') }}</th>
+          <th scope="col" class="w-32 px-3 py-2 text-center font-medium">{{ $t('mysql.table.header.booksCount') }}</th>
+          <th scope="col" class="w-20 px-3 py-2 text-center font-medium">{{ $t('mysql.table.header.actions') }}</th>
         </tr>
       </thead>
       <tbody class="divide-y divide-slate-200">
@@ -24,9 +24,9 @@
             <td class="px-3 py-2 text-center">
               <a
                 data-href="{{ $l.updateUrlQuery($rq, {'id': category.id|s, 'action': 'delete_category'|s}) }}"
-                data-message="{{ $t('Are you sure you want to delete this category?') ~ ' (' ~ category.title ~ ')' }}"
+                data-message="{{ $t('mysql.message.deleteCategory') ~ ' (' ~ category.title ~ ')' }}"
                 class="wave js-delete-links inline-flex h-7 w-7 items-center justify-center rounded border border-transparent text-rose-600 hover:border-rose-200 hover:bg-rose-50 hover:text-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500/30"
-                aria-label="{{ $t('Delete') }}"
+                aria-label="{{ $t('mysql.button.delete') }}"
               >
                 <i class="fas fa-trash text-[13px]"></i>
               </a>
@@ -34,7 +34,7 @@
         </tr>
         {% else %}
         <tr>
-          <td colspan="4" class="px-3 py-6 text-center text-sm text-slate-500">{{ $t('No categories found') }}</td>
+          <td colspan="4" class="px-3 py-6 text-center text-sm text-slate-500">{{ $t('mysql.message.noCategories') }}</td>
         </tr>
         {% endfor %}
       </tbody>
@@ -46,7 +46,7 @@
                 <input
                   type="text"
                   name="title"
-                  placeholder="Title"
+                  placeholder="{{ $t('mysql.placeholder.title') }}"
                   required
                   value="{{ $n('form/title/value') }}"
                   class="h-9 w-56 rounded-md border bg-white px-3 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form/title/errors/0') else 'border-slate-300' }}"
