--- a/example/lib/widgets/example/mysql/overview.j2.html
+++ b/example/lib/widgets/example/mysql/overview.j2.html
@@ -1,9 +1,9 @@
 {% extends 'template/template.j2.html' %}
-{% block title %} {{ $t('Example MySQL') }} {% endblock %}
+{% block title %} {{ $t('mysql.example.title') }} {% endblock %}
 
 {% block content %}
 <div class="my-6 space-y-6">
-  <h3 class="text-xl font-semibold text-slate-800">{{ $t('Example MySQL') }}</h3>
+  <h3 class="text-xl font-semibold text-slate-800">{{ $t('mysql.example.title') }}</h3>
   <div class="overflow-hidden rounded-lg border border-slate-200 bg-white shadow-sm">
     <div class="overflow-x-auto">
       <table class="min-w-full text-xs md:text-sm divide-y divide-slate-200">
@@ -13,7 +13,7 @@
               {% set pageSize = data.pageSize | default("10") %}
               {% set randonString = $e.randomString() %}
               <div class="flex flex-wrap items-center justify-end gap-2">
-                <button type="button" class="wave inline-flex h-8 items-center rounded-md border border-rose-600 bg-rose-50 px-3 text-[11px] font-medium text-rose-700 hover:bg-rose-100 focus:outline-none focus:ring-2 focus:ring-rose-500/30" onclick="deleteSelectedBooks_{{randonString}}()">{{ $t('Delete Selected') }}</button>
+                <button type="button" class="wave inline-flex h-8 items-center rounded-md border border-rose-600 bg-rose-50 px-3 text-[11px] font-medium text-rose-700 hover:bg-rose-100 focus:outline-none focus:ring-2 focus:ring-rose-500/30" onclick="deleteSelectedBooks_{{randonString}}()">{{ $t('mysql.button.deleteSelected') }}</button>
                 <select name="pageSize" class="h-8 rounded-md border border-slate-300 bg-white px-2 text-[11px] shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30" onchange="changePageSize_{{randonString}}(this.value)">
                   <option {{ 'selected' if pageSize == '10' else '' }}>10</option>
                   <option {{ 'selected' if pageSize == '20' else '' }}>20</option>
@@ -31,7 +31,7 @@
                   var selectedBooks = [];
                   document.querySelectorAll('input[name="selected_books"]:checked').forEach(function(el){selectedBooks.push(el.value);});
                   if (selectedBooks.length > 0) {
-                    if (confirm("{{ $t('Are you sure you want to delete the selected books?') }}")) {
+                    if (confirm("{{ $t('mysql.message.deleteSelectedBooks') }}")) {
                       var form = document.createElement('form');
                       form.method = 'POST';
                       form.style.display = 'none';
@@ -49,7 +49,7 @@
                       form.submit();
                     }
                   } else {
-                    alert("{{ $t('No books selected for deletion.') }}");
+                    alert("{{ $t('mysql.message.noBooksSelected') }}");
                   }
                 }
               </script>
@@ -59,13 +59,13 @@
             <th class="px-3 py-2">
               <div class="flex items-center gap-1">
                 <input class="h-4 w-4 rounded border-slate-300 text-primary-600 focus:ring-primary-500" type="checkbox" id="select_all" onchange="document.querySelectorAll(`input[name='selected_books']`).forEach(cb=>cb.checked=this.checked);" />
-                {{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'b.id', 'title': 'ID'} ) }}
+                {{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'b.id', 'title': 'mysql.table.header.id'} ) }}
               </div>
             </th>
-            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'title', 'title': 'Title'} ) }}</th>
-            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'author', 'title': 'Author'} ) }}</th>
-            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'published_date', 'title': 'Published Date'} ) }}</th>
-            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'category_id', 'title': 'Category ID'} ) }}</th>
+            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'title', 'title': 'mysql.table.header.title'} ) }}</th>
+            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'author', 'title': 'mysql.table.header.author'} ) }}</th>
+            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'published_date', 'title': 'mysql.table.header.publishedDate'} ) }}</th>
+            <th class="px-3 py-2">{{ $l.macro($rq,"/template/ui/sorting", {'sortby': 'category_id', 'title': 'mysql.table.header.categoryId'} ) }}</th>
             <th class="px-3 py-2 text-end">{{ $t('database.table.header.action') }}</th>
           </tr>
           <tr>
@@ -84,21 +84,21 @@
               <div class="flex items-end justify-end gap-2">
                 <a
                   data-href="{{ $l.updateUrlQuery($rq, {'id':book.id|s, 'action': 'delete'|s}) }}"
-                  data-message="{{ $t('Are you sure you want to delete this book?') ~ ' (' ~ book.title ~ ')' }}"
+                  data-message="{{ $t('mysql.message.deleteBook') ~ ' (' ~ book.title ~ ')' }}"
                   class="wave js-delete-links inline-flex h-7 w-7 items-center justify-center rounded-full border border-rose-200 text-[11px] text-rose-600 hover:bg-rose-50 focus:outline-none focus:ring-2 focus:ring-rose-500/30"
-                  title="Delete"
+                  title="{{ $t('mysql.button.delete') }}"
                 >🗑️</a>
                 <a
                   href="{{ $l.updateUrlQuery($rq, {'id':book.id|s, 'action': 'edit'|s}) }}"
                   class="wave inline-flex h-7 w-7 items-center justify-center rounded-full border border-primary-200 text-[11px] text-primary-600 hover:bg-primary-50 focus:outline-none focus:ring-2 focus:ring-primary-500/30"
-                  title="Edit"
+                  title="{{ $t('mysql.button.edit') }}"
                 >✏️</a>
               </div>
             </td>
           </tr>
           {% else %}
           <tr>
-            <td colspan="6" class="px-3 py-6 text-center text-slate-500">{{ $t('No records found') }}</td>
+            <td colspan="6" class="px-3 py-6 text-center text-slate-500">{{ $t('mysql.message.noRecords') }}</td>
           </tr>
           {% endfor %}
         </tbody>
